# moos-dawg-24

./: README.md
demo/1_oneof/: command.proto  demo-result.md  demo.sh  md.py
demo/2_dynamic_conditions/: .gitignore  demo  demo-result.md  demo.cpp  demo.sh  md.py  status.pb.cc  status.pb.h
demo/3_hash/: command.proto  command_pb2.py  demo-result.md  demo.py  demo.sh  original_command_with_hash.proto  updated_command.proto  updated_command_with_hash.proto
demo/4_moos/: demo.sh  mm1.moos  mm2.moos  status.proto  stop_moos.sh  updated_command.proto
demo/4_moos/apps/: CMakeLists.txt  command.cpp  pb_marshall.h  status.cpp
docker/: Dockerfile
